add new environment variable

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,19 @@
- MYSQL_HOST_SLAVE=root:password@tcp(host:3306)/mydb?parseTime=true
- MYSQL_POOL_MIN=10
- MYSQL_POOL_MAX=100
- MYSQL_MAX_IDLE_TIME_MINUTE=1
- MYSQL_MAX_LIFE_TIME_MINUTE=10
+MYSQL_HOST_SLAVE=root:password@tcp(host:3306)/mydb?parseTime=true
+MYSQL_POOL_MIN=10
+MYSQL_POOL_MAX=100
+MYSQL_MAX_IDLE_TIME_MINUTE=1
+MYSQL_MAX_LIFE_TIME_MINUTE=10
 
- MYSQL_IDLE_MAX=10
- MYSQL_MAX_LIFE_TIME_MINUTE=10
- MYSQL_MAX_IDLE_TIME_MINUTE=10
+MYSQL_IDLE_MAX=10
+MYSQL_MAX_LIFE_TIME_MINUTE=10
+MYSQL_MAX_IDLE_TIME_MINUTE=10
 
- MIGRATION_PATH=migration
- DATABASE_DIALECT=mysql
+MIGRATION_PATH=migrations
+DATABASE_DIALECT=mysql
+
+JWT_PUBLIC_KEY=
+JWT_SECRET_KEY=
+JWT_MINUTE=10000000
+
+REDIS_HOST=localhost:6379
+REDIS_PASSWORD=password
